# astra

./: .env.example  .gitignore  AGENTS.md  CAPABILITY_RUNTIME_DESIGN.zh-CN.md  GAP_REPORT.md  GAP_REPORT.zh-CN.md  README.md  TESTING.zh-CN.md  pyproject.toml
.agents/skills/cli-manual-acceptance/: SKILL.md
.agents/skills/cli-manual-acceptance/agents/: openai.yaml
.agents/skills/cli-manual-acceptance/references/: checklist.md
.astra/benchmarks/: tasks.yaml
docs/: SELF_ITERATION_PLAN.md  SELF_ITERATION_PLAN_WHOLE.md  architecture.zh-CN.md  evolution_strategy.md  request_flow.md  request_flow_v2.md
scripts/: manual_cli.py  manual_evolution.py  smoke_cli.py  smoke_cli.sh
src/astra/: __init__.py  acp.py  agent.py  app.py  cli.py  cli_commands.py  config.py  evolution.py  iteration.py  models.py  provider.py  session.py  tools.py
src/astra/runtime/: __init__.py  runtime.py
src/pyi/: __init__.py  agent.py  cli.py  config.py  provider.py  session.py  tools.py
src/pyi/runtime/: __init__.py  builtin_capabilities.py  runtime.py
tests/: conftest.py
tests/contract/: test_provider_contract.py
tests/integration/: test_agent_integration.py  test_cli_integration.py  test_cli_smoke_subprocess.py  test_evolution_integration.py
tests/unit/: test_acp.py  test_app.py  test_config.py  test_evolution.py  test_iteration.py  test_runtime.py  test_session.py  test_tools.py
