[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-agent"
version = "0.1.0"
description = "Python replica of pi-mono core coding agent features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
astra = "astra.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "unit: Fast isolated unit tests",
    "integration: Multi-module integration tests",
    "contract: Provider protocol contract tests",
    "slow: Longer-running tests",
]

[tool.coverage.run]
source = ["astra"]

[tool.coverage.report]
skip_empty = true
